--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\pruth\AppData\Local\Temp\testng-eclipse-65827487\testng-customsuite.xml</span>
+                    <span>C:\Users\pruth\AppData\Local\Temp\testng-eclipse--395797118\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.FBAuto.test.LoginPage.LoginPageTest" class="method navigator-link" hash-for-method="CheckValidLogin">CheckValidLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.FBAuto.test.AddContentPage.AddContentTest" class="method navigator-link" hash-for-method="createFile">createFile</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.FBAuto.test.LoginPage.LoginPageTest</span>
+              <span class="class-name">com.FBAuto.test.AddContentPage.AddContentTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CheckValidLogin">
-                  </a> <!-- CheckValidLogin -->
-                  <span class="method-name">CheckValidLogin</span>
+                  <a name="createFile">
+                  </a> <!-- createFile -->
+                  <span class="method-name">createFile</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pruth\AppData\Local\Temp\testng-eclipse-65827487\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\pruth\AppData\Local\Temp\testng-eclipse--395797118\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.FBAuto.test.LoginPage.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.FBAuto.test.AddContentPage.AddContentTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'CheckValidLogin')
-data.setCell(0, 2, 'com.FBAuto.test.LoginPage.LoginPageTest')
-data.setCell(0, 3, 18619);
+data.setCell(0, 1, 'createFile')
+data.setCell(0, 2, 'com.FBAuto.test.AddContentPage.AddContentTest')
+data.setCell(0, 3, 9431);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.FBAuto.test.LoginPage.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.FBAuto.test.AddContentPage.AddContentTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setup</span>
+                <span class="method-name">getLogin</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">CheckValidLogin</span>
-                <span class="method-start">7 ms</span>
+                <span class="method-name">createFile</span>
+                <span class="method-start">6591 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18628 ms</span>
+                <span class="method-start">16024 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
