--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9160aa">  <td>21/03/11 12:34:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.CheckValidLogin()[pri:0, instance:com.FBAuto.test.LoginPage.LoginPageTest@693e4d19]">CheckValidLogin</td> 
-  <td>main@488669101</td>   <td></td> </tr>
-<tr bgcolor="9160aa">  <td>21/03/11 12:34:00</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.FBAuto.test.LoginPage.LoginPageTest@693e4d19]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@488669101</td>   <td></td> </tr>
-<tr bgcolor="9160aa">  <td>21/03/11 12:34:19</td>   <td>18621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.FBAuto.test.LoginPage.LoginPageTest@693e4d19]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@488669101</td>   <td></td> </tr>
+<tr bgcolor="aea0a9">  <td>21/04/04 00:53:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddContentTest.createFile()[pri:0, instance:com.FBAuto.test.AddContentPage.AddContentTest@1358b28e]">createFile</td> 
+  <td>main@845388562</td>   <td></td> </tr>
+<tr bgcolor="aea0a9">  <td>21/04/04 00:52:57</td>   <td>-6591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddContentTest.getLogin()[pri:0, instance:com.FBAuto.test.AddContentPage.AddContentTest@1358b28e]">&gt;&gt;getLogin</td> 
+<td>&nbsp;</td>  <td>main@845388562</td>   <td></td> </tr>
+<tr bgcolor="aea0a9">  <td>21/04/04 00:53:13</td>   <td>9433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddContentTest.tearDown()[pri:0, instance:com.FBAuto.test.AddContentPage.AddContentTest@1358b28e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@845388562</td>   <td></td> </tr>
 </table>
